--- a/postulaciones-app/src/app/components/postulations/postulations.component.html
+++ b/postulaciones-app/src/app/components/postulations/postulations.component.html
@@ -1,16 +1,18 @@
 <main role="main">
+  <!-- Sección de Introducción -->
   <section class="jumbotron text-center">
     <div class="container">
       <h1>My Postulations</h1>
       <p class="lead text-muted">
-        I got tired of having to write everything down in a notebook,
-        so I decided to develop my own application app. Where I can upload applications and my opinions about them.
+        I got tired of having to write everything down in a notebook, so I decided to develop my own application app.
+        Where I can upload applications and my opinions about them.
       </p>
       <figure class="text-end">
         <figcaption class="blockquote-footer">
           <cite title="Source Title">Developed by Federico Rosales</cite>
         </figcaption>
       </figure>
+      <!-- Botones de navegación -->
       <div class="row">
         <div class="col">
           <button type="button" class="btn btn-outline-primary btn-xs" (click)="togglePostulation()">My Postulations</button>
@@ -24,155 +26,115 @@
       </div>
     </div>
   </section>
-  <br>
-  <!-- Listado de postulaciones -->
-  <div class="container-fluid" *ngIf="showPostulation">
+  <!-- Listado de Postulaciones -->
+  <section class="container-fluid" *ngIf="showPostulation">
     <div class="card-group">
-      <div class="col-md-6 content-card" *ngFor="let postulation of postulations; let i = index">
+      <article class="col-md-6 content-card" *ngFor="let postulation of postulations; let i = index">
         <div class="container-fluid">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <h1 class="card-title">{{ postulation.titulo }} - {{ postulation.empresa }}</h1>
-            <div class="accordion">
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button
-                    class="accordion-button collapsed btn-info"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    [attr.data-bs-target]="'#collapse' + i"
-                    aria-expanded="false"
-                    [attr.aria-controls]="'collapse' + i">
-                    Description
-                  </button>
-                </h2>
-                <div
-                  [id]="'collapse' + i"
-                  class="accordion-collapse collapse"
-                  [attr.aria-labelledby]="'heading' + i">
-                  <div class="accordion-body">
-                    <figure class="text-end">
-                      <blockquote class="blockquote">
-                        <p><small>{{ postulation.fecha_de_alta }}</small></p>
-                      </blockquote>
-                    </figure>
-                    <p class="card-text">{{ postulation.descripcion }} </p>
-                    <br>
-                    <ul>
-                      <li *ngFor="let responsabilidad of postulation.responsabilidades">
-                        <p class="card-text">{{ responsabilidad }} </p>
-                      </li>
-                    </ul>
+          <div class="card shadow-sm">
+            <div class="card-body">
+              <h1 class="card-title">{{ postulation.titulo }} - {{ postulation.empresa }}</h1>
+              <!-- Descripción con acordeón -->
+              <div class="accordion">
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed btn-info" type="button" data-bs-toggle="collapse"
+                            [attr.data-bs-target]="'#collapse' + i" aria-expanded="false"
+                            [attr.aria-controls]="'collapse' + i">
+                      Description
+                    </button>
+                  </h2>
+                  <div [id]="'collapse' + i" class="accordion-collapse collapse" [attr.aria-labelledby]="'heading' + i">
+                    <div class="accordion-body">
+                      <figure class="text-end">
+                        <blockquote class="blockquote">
+                          <p><small>{{ postulation.fecha_de_alta }}</small></p>
+                        </blockquote>
+                      </figure>
+                      <p class="card-text">{{ postulation.descripcion }}</p>
+                      <ul>
+                        <li *ngFor="let responsabilidad of postulation.responsabilidades">
+                          <p class="card-text">{{ responsabilidad }}</p>
+                        </li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <br>
-            <div class="row">
-              <div class="col">
-                <div class="alert alert-primary" role="alert">
-                  Recruiter: {{ postulation.reclutador }}
+              <!-- Información adicional -->
+              <div class="row mt-3">
+                <div class="col">
+                  <div class="alert alert-primary">Recruiter: {{ postulation.reclutador }}</div>
+                </div>
+                <div class="col">
+                  <div class="alert alert-success">Salary: {{ postulation.salario }}</div>
                 </div>
               </div>
-              <div class="col">
-                <div class="alert alert-success" role="alert">
-                  Salary: {{ postulation.salario }}
+              <!-- Botones de acción -->
+              <div class="row justify-content-center mt-3">
+                <div class="col-auto">
+                  <button type="button" class="btn btn-outline-warning" (click)="toggleCommentForm(postulation.empresa)">Comment</button>
                 </div>
-              </div>
-            </div>
-            <div class="row justify-content-center">
-              <div class="col-auto">
-                <button
-                  type="button"
-                  class="btn btn-outline-warning"
-                  (click)="toggleCommentForm(postulation.empresa)">
-                  Comment
-                </button>
-              </div>
-              <div class="col-auto">
-                <button
-                  type="button"
-                  class="btn btn-outline-danger"
-                  (click)="deletePostulation(postulation.id)">
-                  Delete
-                </button>
+                <div class="col-auto">
+                  <button type="button" class="btn btn-outline-danger" (click)="deletePostulation(postulation.id)">Delete</button>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        </div>
-
-      </div>
-
+      </article>
     </div>
-  </div>
-  <!-- Listado de comentarios -->
-  <div class="container-fluid" *ngIf="showComment">
+  </section>
+  <!-- Listado de Comentarios -->
+  <section class="container-fluid" *ngIf="showComment">
     <div class="card-group">
-      <div class="col-md-4 col-md-2 content-card" *ngFor="let comment of comments">
+      <article class="col-md-4 content-card" *ngFor="let comment of comments">
         <div class="container-fluid">
-        <div class="card-big-shadow" >
-          <div class="card" data-background="color" data-color="yellow" data-radius="none">
-            <div class="content">
-              <h4 class="title">{{ comment.empresa }} - {{ comment.valoracion }} </h4>
-              <h6 class="category"> My Personal Opinion</h6>
-              <p class="description">{{ comment.opinion_personal }}</p>
-              <h6 class="category"> Opinion's Glassdoor</h6>
-              <ul class="list-group list-group-flush" *ngFor="let opinion of comment.opiniones_glassdoor">
-                <p class="description">"{{ opinion }}"</p>
-              </ul>
+          <div class="card-big-shadow">
+            <div class="card" data-background="color" data-color="yellow" data-radius="none">
+              <div class="content">
+                <h4 class="title">{{ comment.empresa }}</h4>
+                <h6 class="category"> My Personal Opinion</h6>
+                <p class="description">{{ comment.opinion_personal }}</p>
+                <h6 class="category"> Evaluated: {{ comment.valoracion }} </h6>
+                <h6 class="category"> Opinion's Glassdoor</h6>
+                <ul class="list-group list-group-flush">
+                  <li *ngFor="let opinion of comment.opiniones_glassdoor">
+                    <p class="description">"{{ opinion }}"</p>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-        </div>
-      </div>
+      </article>
     </div>
-  </div>
-  <!-- Formulario de creación  -->
-  <div class="container mt-4 " *ngIf="showForm">
-    <form  [formGroup]="postulationForm" (ngSubmit)="createPostulation()" >
+  </section>
+  <!-- Formulario de Creación de Postulación -->
+  <section class="container mt-4" *ngIf="showForm">
+    <form [formGroup]="postulationForm" (ngSubmit)="createPostulation()">
       <div class="row">
         <div class="col">
-          <input type="text"
-                 id="titulo"
-                 class="form-control"
-                 placeholder="Título del puesto">
+          <input type="text" id="titulo" class="form-control" placeholder="Título del puesto">
         </div>
         <div class="col">
-          <input type="text"
-                 id="empresa"
-                 class="form-control"
-                 placeholder="Nombre de la empresa">
+          <input type="text" id="empresa" class="form-control" placeholder="Nombre de la empresa">
         </div>
       </div>
       <br>
       <div class="form-group">
-         <textarea
-           id="descripcion"
-           class="form-control"
-           rows="3"
-           placeholder="Descripción del puesto ..."
-         ></textarea>
+        <textarea id="descripcion" class="form-control" rows="3" placeholder="Descripción del puesto ..."></textarea>
       </div>
       <br>
+      <br>
       <div class="form-group">
-         <textarea
-           id="responsabilidades"
-           class="form-control"
-           rows="3"
-           placeholder="Lista de responsabilidades separadas por coma"
-         ></textarea>
+        <textarea id="responsabilidades" class="form-control" rows="3" placeholder="Lista de responsabilidades separadas por coma"></textarea>
       </div>
       <br>
       <div class="row">
         <div class="col">
           <label for="salario">Salario</label>
-          <input
-            type="number"
-            id="salario"
-            class="form-control"
-            placeholder="Ej: 3000USD o 1500000ARS"
-          />
+          <input type="number" id="salario" class="form-control" placeholder="Ej: 3000USD o 1500000ARS"/>
         </div>
         <div class="col">
           <label for="tiene_ingles">¿Requiere inglés?</label>
@@ -183,41 +145,22 @@
         </div>
         <div class="col">
           <label for="fecha_publicacion">Fecha de publicación</label>
-          <input
-            type="date"
-            id="fecha_publicacion"
-            class="form-control"
-          />
+          <input type="date" id="fecha_publicacion" class="form-control"/>
         </div>
       </div>
       <br>
       <div class="form-group">
-         <textarea
-           id="beneficios"
-           class="form-control"
-           rows="2"
-           placeholder="Beneficios ofrecidos"
-         ></textarea>
+        <textarea id="beneficios" class="form-control" rows="2" placeholder="Beneficios ofrecidos"></textarea>
       </div>
       <br>
       <div class="form-group">
-        <input
-          type="text"
-          id="reclutador"
-          class="form-control"
-          placeholder="Nombre del reclutador"
-        />
+        <input type="text" id="reclutador" class="form-control" placeholder="Nombre del reclutador"/>
       </div>
       <br>
       <div class="row">
         <div class="col">
           <br>
-          <input
-            type="number"
-            id="antiguedad"
-            class="form-control"
-            placeholder="Antiguedad en años"
-          />
+          <input type="number" id="antiguedad" class="form-control" placeholder="Antiguedad en años"/>
         </div>
         <div class="col">
           <label for="tipo">Tamaño de la empresa</label>
@@ -229,40 +172,20 @@
         </div>
         <div class="col">
           <br>
-          <input
-            type="number"
-            id="cantidad_empleados"
-            class="form-control"
-            placeholder="Cantidad de empleados"
-          />
+          <input type="number" id="cantidad_empleados" class="form-control" placeholder="Cantidad de empleados"/>
         </div>
       </div>
       <br>
       <div class="form-group">
-         <textarea
-           id="opiniones"
-           class="form-control"
-           rows="2"
-           placeholder="Opiniones de la empresa ..."
-         ></textarea>
+        <textarea id="opiniones" class="form-control" rows="2" placeholder="Opiniones de la empresa ..."></textarea>
       </div>
       <br>
       <div class="row">
         <div class="col">
-          <input
-            type="number"
-            id="validacion"
-            class="form-control"
-            placeholder="Validacion de la empresa(1 al 5)"
-          />
+          <input type="number" id="validacion" class="form-control" placeholder="Validacion de la empresa(1 al 5)"/>
         </div>
         <div class="col">
-          <input
-            type="number"
-            id="sueldo_opinion"
-            class="form-control"
-            placeholder="Poner el sueldo que pagan realmente"
-          />
+          <input type="number" id="sueldo_opinion" class="form-control" placeholder="Sueldo Real(Charlado con el Recrutier)"/>
         </div>
       </div>
       <br>
@@ -271,34 +194,18 @@
         <button type="button" class="btn btn-outline-danger" (click)="toggleCancel()">Cancel</button>
       </div>
     </form>
-  </div>
-  <!-- Formulario de Comentario-->
-  <div class="container mt-4 " *ngIf="showCommentForm">
-    <form  [formGroup]="commentForm" (ngSubmit)="createComment()" >
+  </section>
+  <!-- Formulario de Comentarios -->
+  <section class="container mt-4" *ngIf="showCommentForm">
+    <form [formGroup]="commentForm" (ngSubmit)="createComment()">
       <div class="form-group">
-         <textarea
-           id="comentario"
-           class="form-control"
-           rows="3"
-           placeholder="Add commnents here..."
-           formControlName="comentario"
-         ></textarea>
+        <textarea id="comentario" class="form-control" rows="3" placeholder="Add comments here..." formControlName="comentario"></textarea>
       </div>
       <br>
       <div class="d-flex flex-wrap gap-2">
-        <button
-          type="button"
-          class="btn btn-outline-success"
-          (click)="createComment()">
-          Save
-        </button>
-        <button
-          type="button"
-          class="btn btn-outline-danger"
-          (click)="toggleCancel()">
-          Cancel
-        </button>
+        <button type="submit" class="btn btn-outline-success">Save</button>
+        <button type="button" class="btn btn-outline-danger" (click)="toggleCancel()">Cancel</button>
       </div>
     </form>
-  </div>
+  </section>
 </main>
